.infra/chart/templates/service.yml
kind: Service
apiVersion: v1
metadata:
  name: example-deployment
spec:
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
  selector:
    app: example-deployment
